// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render correctly Button component 1`] = `
<div
  className="sc-bdfBwQ"
>
  <button
    className="sc-gsTCUz fBNnYR"
    type="button"
  >
    Click me
  </button>
</div>
`;

exports[`Button render disabled Button component 1`] = `
<div
  className="sc-bdfBwQ"
>
  <button
    className="sc-gsTCUz fBNnYR"
    disabled={true}
    type="button"
  >
    Click me
  </button>
</div>
`;
